tests/paczka1/fuzzy1/88362063.err
Error in line 4: A8 S775 81,5
Error in line 5: A8 A41 260,8
Error in line 10: A8 A41 58,7
Error in line 1: uGG S775 6,3
Error in line 17: A8 A41 30,8
Error in line 15: uGG A8 24,1
Error in line 21: A8 A41 39,1
Error in line 12: nbCJoh A8 101,5
Error in line 26: HRWFWTwiGu A41 75,4
Error in line 33: A8 A466 80,2
Error in line 8: kJvhFfWEUm A8 6,2
Error in line 38: A8 A8 92,4
